src/objects/RMM_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Infinity_response__c</fullName>
        <label>Infinity response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMM_Factor__c</fullName>
        <label>RMM Factor</label>
        <referenceTo>Factor__c</referenceTo>
        <relationshipLabel>RMM Indicators</relationshipLabel>
        <relationshipName>RMM_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RMM_Indicator__c</fullName>
        <label>RMM Indicator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>RMM Indicator</label>
    <nameField>
        <displayFormat>RMMI-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMM Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>